tests/parser/parse-declare.5.bad.error
error: Invalid target for repr attribute
  --> test:4:0
   |
 4 |  (repr :enum)
   |  ^^^^^^^^^^^^ repr must be attached to a define-type
 5 |  (declare x T)
   |  ------------- when parsing declare
