tests/parser/parse-declare.5.bad.coalton
;; BAD: Parse Declare
(package test-package)

(repr :enum)
(declare x T)
